[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Opponent/Opponent.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Ball/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Level.gd" type="Script" id=5]
[ext_resource path="res://Assets/Poppins-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 0.00398118, 65.6388 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 6 )

[node name="Level" type="Node"]
script = ExtResource( 5 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="WallRight" type="Area2D" parent="."]
position = Vector2( 1305, 361 )
scale = Vector2( -7105.41, -8.32638 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 0.000114575, 0.180153 )
rotation = -3.14159
scale = Vector2( 0.74894, 0.660527 )
shape = SubResource( 1 )

[node name="WallLeft" type="Area2D" parent="."]
position = Vector2( -24, 355 )
scale = Vector2( -7105.41, -8.32638 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 0.000114675, -0.480404 )
rotation = -3.14159
scale = Vector2( 0.74894, 0.660527 )
shape = SubResource( 1 )

[node name="WallBottom" parent="." instance=ExtResource( 2 )]
position = Vector2( 643, 729 )
scale = Vector2( 64.2283, 0.766325 )

[node name="WallTop" parent="." instance=ExtResource( 2 )]
position = Vector2( 643, -8 )
scale = Vector2( 64.2283, 0.766325 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )

[node name="CountdownLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -63.0
margin_top = 27.0
margin_right = 63.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 4 )
text = "Time"
align = 1
valign = 1

[node name="PlayerScore" type="Label" parent="."]
margin_top = 20.0
margin_right = 154.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_top = 17.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 3 )
text = "0
"
align = 1
valign = 1

[node name="Win" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -228.0
margin_top = 20.0
margin_right = 228.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 5 )
text = "{player} Wins!"

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 640, 360 )

[node name="Opponent" parent="." instance=ExtResource( 3 )]
position = Vector2( 1245, 360 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 360 )

[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
